// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockDataForm should add variations to schema 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="SelectWidget"
        >
          [["default","Default"],["extra","Extra"]]
        </div>
      </div>
    </div>
    <div
      class="accordion ui fluid styled form"
    >
      <div
        id="blockform-fieldset-styling"
      >
        <div
          class="active title"
        >
          Styling
          <svg
            class="icon"
            style="height: 20px; width: auto; fill: currentColor;"
            viewBox=""
            xmlns=""
          />
        </div>
        <div
          class="content active"
        >
          <div
            aria-hidden="false"
            class="rah-static rah-static--height-auto"
            style="height: auto; overflow: visible;"
          >
            <div
              style="transition: opacity 500ms ease 0ms;"
            >
              <div
                class="ui segment attached"
              >
                <div
                  class="TextWidget"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockDataForm should does not add variations to schema when unneeded 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      />
    </div>
    <div
      class="accordion ui fluid styled form"
    >
      <div
        id="blockform-fieldset-styling"
      >
        <div
          class="active title"
        >
          Styling
          <svg
            class="icon"
            style="height: 20px; width: auto; fill: currentColor;"
            viewBox=""
            xmlns=""
          />
        </div>
        <div
          class="content active"
        >
          <div
            aria-hidden="false"
            class="rah-static rah-static--height-auto"
            style="height: auto; overflow: visible;"
          >
            <div
              style="transition: opacity 500ms ease 0ms;"
            >
              <div
                class="ui segment attached"
              >
                <div
                  class="TextWidget"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockDataForm should does not add variations when only one variation 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      />
    </div>
    <div
      class="accordion ui fluid styled form"
    >
      <div
        id="blockform-fieldset-styling"
      >
        <div
          class="active title"
        >
          Styling
          <svg
            class="icon"
            style="height: 20px; width: auto; fill: currentColor;"
            viewBox=""
            xmlns=""
          />
        </div>
        <div
          class="content active"
        >
          <div
            aria-hidden="false"
            class="rah-static rah-static--height-auto"
            style="height: auto; overflow: visible;"
          >
            <div
              style="transition: opacity 500ms ease 0ms;"
            >
              <div
                class="ui segment attached"
              >
                <div
                  class="TextWidget"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
